<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calc"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/gridPaddingHorizontal"
        android:paddingEnd="@dimen/gridPaddingHorizontal"
        android:background="@color/background">

    <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0pt"
            android:layout_weight="0.3"
            android:orientation="vertical">
        <TextView
                android:id="@+id/calcHist"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="0.4"
                android:gravity="center|end"
                android:text=""
                android:textColor="@color/whiteText"
                android:background="@color/background"
                android:textSize="15pt"
                android:maxLines="1"
                android:maxLength="12"
                android:ems="10"/>

        <TextView
                android:id="@+id/calcOutput"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="0.6"
                android:gravity="bottom|end"
                android:text=""
                android:textColor="@color/whiteText"
                android:background="@color/background"
                android:textSize="40pt"
                android:maxLines="1"
                android:maxLength="12"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12">
        <Button
                android:id="@+id/btnAC"
                android:text="@string/btnAC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/accentRed"
                android:gravity="center"
                android:background="@drawable/other_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btnSign"
                android:text="@string/btnSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/other_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btnPer"
                android:text="@string/btnPer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/accentGreen"
                android:gravity="center"
                android:background="@drawable/other_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btnDiv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btnDiv"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/accentGreen"
                android:gravity="center"
                android:background="@drawable/oper_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12">
        <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn7"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn8"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn9"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btnMul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btnMul"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/accentGreen"
                android:gravity="center"
                android:background="@drawable/oper_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/row4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12">
        <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn4"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn5"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn6"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btnSub"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/accentGreen"
                android:gravity="center"
                android:background="@drawable/oper_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/row5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12">
        <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn1"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn2"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btn3"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/textPrimary"
                android:gravity="center"
                android:background="@drawable/digit_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@dimen/portrait_weight"
                android:text="@string/btnAdd"
                android:textSize="@dimen/buttonText"
                android:textColor="@color/accentGreen"
                android:gravity="center"
                android:background="@drawable/oper_buttons"
                android:layout_marginTop="@dimen/buttonMarginVertical"
                android:layout_marginRight="@dimen/buttonMarginHorizontal"
                android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/row6"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
            <Button
                    android:id="@+id/btn0"
                        android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/portrait_2xweight"
                    android:text="@string/btn0"
                    android:textSize="@dimen/buttonText"
                    android:textColor="@color/textPrimary"
                    android:gravity="center"
                    android:background="@drawable/digit_buttons"
                    android:layout_marginTop="@dimen/buttonMarginVertical"
                    android:layout_marginRight="@dimen/buttonMarginHorizontal"
                        android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
            <Button
                    android:id="@+id/btnDec"
                        android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/portrait_weight"
                    android:text="@string/btnDec"
                    android:textSize="@dimen/buttonText"
                    android:textColor="@color/textPrimary"
                    android:gravity="center"
                    android:background="@drawable/digit_buttons"
                    android:layout_marginTop="@dimen/buttonMarginVertical"
                    android:layout_marginRight="@dimen/buttonMarginHorizontal"
                        android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
            <Button
                    android:id="@+id/btnEqual"
                        android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/portrait_weight"
                    android:text="@string/btnEqual"
                    android:textSize="@dimen/buttonText"
                    android:textColor="@color/textPrimary"
                    android:gravity="center"
                    android:background="@drawable/btn_equal_fill"
                    android:layout_marginTop="@dimen/buttonMarginVertical"
                    android:layout_marginRight="@dimen/buttonMarginHorizontal"
                        android:layout_marginLeft="@dimen/buttonMarginHorizontal"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>